--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -29,7 +29,7 @@
 
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
-    <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <!--<a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>-->
     <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 
