--- a/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
+++ b/src/main/webapp/app/jarjestyskriteeri/jarjestyskriteeri.html
@@ -3,63 +3,70 @@
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
     <a ng-if="valintaryhmaOid" ng-href="#/valintaryhma/{{valintaryhmaOid}}/laskentakaavalista" class="tab"><span>Laskentakaavat</span></a>
-    <a ng-if="hakukohdeOid" ng-href="#/hakukohde/{{hakukohdeOid}}/laskentakaavalista" class="tab"><span>Laskentakaavat</span></a>
+    <a ng-if="hakukohdeOid" ng-href="#/hakukohde/{{hakukohdeOid}}/laskentakaavalista"
+       class="tab"><span>Laskentakaavat</span></a>
     <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 
 <div class="tabsheets">
     <breadcrumb></breadcrumb>
     <form name="form" ng-submit="submit()">
-        <div class="form-row">
-            <label class="form-row-label" for="metatiedot">Metatiedot</label>
+        <div class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="metatiedot">Metatiedot</label>
 
-            <div class="form-row-content">
-                <input type="text" name="metatiedot" id="metatiedot" ng-model="model.jarjestyskriteeri.metatiedot"/>
-            </div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="form-row" ng-model="model.laskentakaavaModel.laskentakaavat">
-
-            <div class="form-row-label"><h3>Laskentakaavan valinta <span></span></h3><br/></div>
-            <div class="clear"></div>
-
-            <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat" class="field-container-radio">
-                <div class="form-row-label">{{group.name}}<br/></div>
-                <div class="form-row-content">
-                    <!--<span >{{model.laskentakaavat}}</span>-->
-                    <div ng-repeat="data in group.result" class="field-container-radio">
-                        <label>
-                            <input type="radio" name="laskentakaava" value="{{data.id}}"
-                                   ng-model="model.jarjestyskriteeri.laskentakaavaId"
-                                   ng-required="!model.jarjestyskriteeri.laskentakaavaId"/>
-
-                            <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
-
-                            <a ng-if="group.valintaryhmaOid" target="_blank" ng-href="#/valintaryhma/{{group.valintaryhmaOid}}/laskentakaavalista/laskentakaava/{{data.id}}">Näytä kaava</a>
-                            <!--<a ng-if="group.name === 'Juurikaavat'" target="_blank" ng-href="#/valintaryhma/{{group.valintaryhmaOid}}/laskentakaavalista/laskentakaava/{{data.id}}">näytä kaava</a>-->
-                            <a ng-if="group.hakukohdeOid" target="_blank" ng-href="#/hakukohde/{{group.hakukohdeOid}}/laskentakaavalista/laskentakaava/{{data.id}}">Näytä kaava</a>
-                        </label>
-                    </div>
-                    <br/>
+                <div class="col-sm-6">
+                    <input class="form-control" type="text" name="metatiedot" id="metatiedot"
+                           ng-model="model.jarjestyskriteeri.metatiedot"/>
                 </div>
+            </div>
+
+            <div class="form-group" ng-model="model.laskentakaavaModel.laskentakaavat">
+
+                <label class="col-sm-2 control-label">Laskentakaavan valinta</label>
 
                 <div class="clear"></div>
+                <div ng-repeat="group in model.laskentakaavaModel.laskentakaavat">
+                    <label class="col-sm-2 control-label">{{group.name}}<br/></label>
+
+                    <div class="col-sm-10">
+                        <!--<span >{{model.laskentakaavat}}</span>-->
+                        <div ng-repeat="data in group.result">
+                            <p class="form-control-static">
+                                <input type="radio" name="laskentakaava" value="{{data.id}}"
+                                       ng-model="model.jarjestyskriteeri.laskentakaavaId"
+                                       ng-required="!model.jarjestyskriteeri.laskentakaavaId"/>
+
+                                <span ng-bind="data.nimi"></span>(<span ng-bind="data.id"></span>)
+
+                                <a ng-if="group.valintaryhmaOid" target="_blank"
+                                   ng-href="#/valintaryhma/{{group.valintaryhmaOid}}/laskentakaavalista/laskentakaava/{{data.id}}">Näytä
+                                    kaava</a>
+                                <!--<a ng-if="group.name === 'Juurikaavat'" target="_blank" ng-href="#/valintaryhma/{{group.valintaryhmaOid}}/laskentakaavalista/laskentakaava/{{data.id}}">näytä kaava</a>-->
+                                <a ng-if="group.hakukohdeOid" target="_blank"
+                                   ng-href="#/hakukohde/{{group.hakukohdeOid}}/laskentakaavalista/laskentakaava/{{data.id}}">Näytä
+                                    kaava</a>
+                            </p>
+                        </div>
+                        <br/>
+                    </div>
+
+                </div>
             </div>
+            <div class="form-group">
+                <div class="col-sm-2">
+                        <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+                        </button>
 
-        </div>
-
-
-        <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
-        </button>
-
-        <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
-            <div ng-show="!model.jarjestyskriteeri.oid">
-                <i class="fa fa-floppy-o"></i> Lisää
+                        <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
+                            <div ng-show="!model.jarjestyskriteeri.oid">
+                                <i class="fa fa-floppy-o"></i> Lisää
+                            </div>
+                            <div ng-show="model.jarjestyskriteeri.oid">
+                                <i class="fa fa-floppy-o"></i> Muokkaa
+                            </div>
+                    </button>
+                </div>
             </div>
-            <div ng-show="model.jarjestyskriteeri.oid">
-                <i class="fa fa-floppy-o"></i> Muokkaa
-            </div>
-        </button>
     </form>
 </div>
