VT-904: korjattu templaten linkki

--- a/src/main/webapp/app/hakukohde/hakukohde_uusi.html
+++ b/src/main/webapp/app/hakukohde/hakukohde_uusi.html
@@ -16,7 +16,7 @@
         <label class="form-row-label">Ylävalintaryhmä</label>
 
         <div class="form-row-content width-60">
-            <div ng-include="'partials/valintaryhmaSelector.html'" />
+            <div ng-include="'../common/partials/valintaryhmaSelector.html'" />
             <div class="clear"></div>
         </div>
         <div class="clear"></div>
