viittaukset toasteriin poistettu

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="../common/jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../common/jslib/ui-bootstrap-tpls.min.js"></script>
+    <!--<script type="text/javascript" src="../common/jslib/toaster.js"></script>-->
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
@@ -77,10 +78,13 @@
     <!-- virkailija css -->
 
     <link href="../common/css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="../common/css/other.css" rel="stylesheet" type="text/css" />
 
     <link href="../common/css/bootstrap-3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <!--<link href="../common/jslib/toaster.css" rel="stylesheet" type="text/css"/>-->
     <link href="../common/css/virkailija.css" rel="stylesheet" type="text/css"/>
+    <link href="../common/css/other.css" rel="stylesheet" type="text/css" />
+
+
 
 </head>
 <body>
