--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -66,7 +66,7 @@
 
                 <div class="col-sm-9" ng-if="valintaperusteviite.tyyppi == 'ARVOJOUKKO'">
                     <select ng-disabled="alikaavaValues.isAlikaava" ng-model="valintaperuste.tunniste"
-                            ng-options="key as value for (key, value) in valintaperusteviite.arvojoukko"></select>
+                            ng-options="arvo.avain as arvo.arvo for arvo in valintaperusteviite.arvojoukko | orderBy:'arvo'"></select>
                 </div>
             </div>
 
