--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="col-sm-2">
-            <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+            <button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i class="fa fa-arrow-left"></i> Takaisin
             </button>
             <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
                 <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
