--- a/src/main/webapp/app/hakukohde/hakukohdelomake.html
+++ b/src/main/webapp/app/hakukohde/hakukohdelomake.html
@@ -203,7 +203,7 @@
 
         <div class="form-group">
             <div class="col-md-2">
-                <button type="button" class="btn btn-sm btn-default" ng-click="cancel()"><i
+                <button type="button" class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i
                         class="fa fa-arrow-left"></i> Takaisin
                 </button>
                 <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
