--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col-sm-2">
-            <button type="button" class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
+            <button type="button" class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i class="fa fa-arrow-left"></i> Takaisin</button>
             <button auth="crud" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
         </div>
         <div class="clear"></div>
