--- a/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
@@ -50,7 +50,7 @@
                 Liitä
         </button>
 
-        <button class="button small float-left margin-right-2" ng-click="cancel()">Takaisin</button>
+        <button class="button small float-left margin-right-2" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi">Takaisin</button>
     </div>
 </form>
         </div>
