--- a/src/main/webapp/app/hakukohde/hakukohde_uusi.html
+++ b/src/main/webapp/app/hakukohde/hakukohde_uusi.html
@@ -72,7 +72,7 @@
         <div class="clear"></div>
     </div>
 
-    <button type="button" class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
+    <button type="button" class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i class="fa fa-arrow-left"></i> Takaisin</button>
     <button auth="crud" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
 
 </form>
