--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -79,7 +79,7 @@
     </button>
         </span>
     <span>
-    <button class="btn btn-sm btn-default float-left margin-right-1" ng-click="cancel()"><i
+    <button class="btn btn-sm btn-default float-left margin-right-1" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i
             class="fa fa-arrow-left"></i> Takaisin
     </button></span>
     </form>
