--- a/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valintakoevalinnanvaihelomake.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="clear"></div>
-        <span><button class="btn btn-sm btn-default" ng-click="cancel()"><i
+        <span><button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i
                 class="fa fa-arrow-left"></i> Takaisin
         </button></span>
     <span><button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
