--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -176,7 +176,7 @@
 
 
 <div class="col-md-12">
-    <button type="button" class="float-left margin-right-1 btn btn-sm btn-default" ng-click="cancel()"><i
+    <button type="button" class="float-left margin-right-1 btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i
             class="fa fa-arrow-left"></i> Takaisin
     </button>
     <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
