--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -264,7 +264,7 @@
 </div>
 
 <div class="clear"></div>
-<button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+<button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"></i> Takaisin
 </button>
 <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
         class="fa fa-floppy-o"></i>
