--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -34,8 +34,10 @@
     <label class="form-row-label" for="aloituspaikat">Aloituspaikat</label>
 
     <div class="form-row-content">
-        <input type="number" min="0" id="aloituspaikat" name="aloituspaikat"
+        <input ng-if="!model.valintatapajono.kaikkiEhdonTayttavatHyvaksytaan" type="number" min="0" id="aloituspaikat" name="aloituspaikat"
                ng-model="model.valintatapajono.aloituspaikat" required>
+        <input ng-if="model.valintatapajono.kaikkiEhdonTayttavatHyvaksytaan" type="number" min="0" id="aloituspaikat" name="aloituspaikat"
+               ng-model="model.valintatapajono.aloituspaikat"/>
     </div>
     <div class="clear"></div>
 
@@ -264,7 +266,7 @@
 </div>
 
 <div class="clear"></div>
-<button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"></i> Takaisin
+<button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi""><i class="fa fa-arrow-left"></i> Takaisin
 </button>
 <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
         class="fa fa-floppy-o"></i>
