--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -260,7 +260,8 @@
             </tr>
             </tbody>
         </table>
-        <span auth="crud" class="button small" ng-click="addHakijaryhma()">Liitä hakijaryhmä</span>
+        <span auth="crud" class="btn btn-sm btn-default" ng-click="addHakijaryhma()"><i
+                class="fa fa-plus"></i> Liitä hakijaryhmä</span>
     </div>
     <span ng-if="model.valintatapajono.siirretaanSijoitteluun && !model.valintatapajono.oid">Tallenna jono lisätäksesi hakijaryhma.</span>
 </div>
