--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -43,49 +43,49 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label class="col-md-2 control-label"
-                   for="tarkkaKiintio"
-                   popover-popup-delay="500"
-                   popover-placement="right"
-                   popover-trigger="mouseenter"
-                   popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä">Kiintiö on tarkka</label>
+        <!--<div class="form-group">-->
+            <!--<label class="col-md-2 control-label"-->
+                   <!--for="tarkkaKiintio"-->
+                   <!--popover-popup-delay="500"-->
+                   <!--popover-placement="right"-->
+                   <!--popover-trigger="mouseenter"-->
+                   <!--popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä">Kiintiö on tarkka</label>-->
 
-            <div class="col-md-2 ">
-                <div class="checkbox">
-                    <input type="checkbox"
-                           id="tarkkaKiintio"
-                           ng-model="model.hakijaryhma.tarkkaKiintio"
-                           popover-popup-delay="500"
-                           popover-placement="right"
-                           popover-trigger="mouseenter"
-                           popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä"
-                            />
-                </div>
-            </div>
-        </div>
+            <!--<div class="col-md-2 ">-->
+                <!--<div class="checkbox">-->
+                    <!--<input type="checkbox"-->
+                           <!--id="tarkkaKiintio"-->
+                           <!--ng-model="model.hakijaryhma.tarkkaKiintio"-->
+                           <!--popover-popup-delay="500"-->
+                           <!--popover-placement="right"-->
+                           <!--popover-trigger="mouseenter"-->
+                           <!--popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä"-->
+                            <!--/>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <div class="form-group">
-            <label class="col-md-2 control-label"
-                   for="kaytaKaikki"
-                   popover-popup-delay="500"
-                   popover-placement="right"
-                   popover-trigger="mouseenter"
-                   popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt">Käytä kaikki hyväksytyt</label>
+        <!--<div class="form-group">-->
+            <!--<label class="col-md-2 control-label"-->
+                   <!--for="kaytaKaikki"-->
+                   <!--popover-popup-delay="500"-->
+                   <!--popover-placement="right"-->
+                   <!--popover-trigger="mouseenter"-->
+                   <!--popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt">Käytä kaikki hyväksytyt</label>-->
 
-            <div class="col-md-2 ">
-                <div class="checkbox" >
-                    <input type="checkbox"
-                           ng-model="model.hakijaryhma.kaytaKaikki"
-                           id="kaytaKaikki"
-                           popover-popup-delay="500"
-                           popover-placement="right"
-                           popover-trigger="mouseenter"
-                           popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt"
-                            />
-                </div>
-            </div>
-        </div>
+            <!--<div class="col-md-2 ">-->
+                <!--<div class="checkbox" >-->
+                    <!--<input type="checkbox"-->
+                           <!--ng-model="model.hakijaryhma.kaytaKaikki"-->
+                           <!--id="kaytaKaikki"-->
+                           <!--popover-popup-delay="500"-->
+                           <!--popover-placement="right"-->
+                           <!--popover-trigger="mouseenter"-->
+                           <!--popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt"-->
+                            <!--/>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
 
         <div class="form-group">
@@ -141,17 +141,19 @@
         <!--</div>-->
 
         <div class="col-sm-2">
-            <button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top"
-                    popover-trigger="mouseenter" popover="Muista tallentaa muutoksesi"><i class="fa fa-arrow-left"></i>
-                Takaisin
-            </button>
-            <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
-                <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
-                    Lisää
-                </div>
-                <div ng-show="model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
-                    Tallenna
-                </div>
+            <button class="btn btn-sm btn-default"
+                    ng-click="cancel()"
+                    popover-popup-delay="500"
+                    popover-placement="top"
+                    popover-trigger="mouseenter"
+                    popover="Muista tallentaa muutoksesi"><i class="fa fa-arrow-left"></i> Takaisin</button>
+
+            <button auth="update"
+                    ng-disabled="!form.$valid"
+                    class="btn btn-sm btn-primary"
+                    type="submit">
+                <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i> Lisää</div>
+                <div ng-show="model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i> Tallenna</div>
             </button>
         </div>
         <div class="clear"></div>
