--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -43,49 +43,49 @@
             </div>
         </div>
 
-        <!--<div class="form-group">-->
-            <!--<label class="col-md-2 control-label"-->
-                   <!--for="tarkkaKiintio"-->
-                   <!--popover-popup-delay="500"-->
-                   <!--popover-placement="right"-->
-                   <!--popover-trigger="mouseenter"-->
-                   <!--popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä">Kiintiö on tarkka</label>-->
+        <div class="form-group">
+            <label class="col-md-2 control-label"
+                   for="tarkkaKiintio"
+                   popover-popup-delay="500"
+                   popover-placement="right"
+                   popover-trigger="mouseenter"
+                   popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä">Kiintiö on tarkka</label>
 
-            <!--<div class="col-md-2 ">-->
-                <!--<div class="checkbox">-->
-                    <!--<input type="checkbox"-->
-                           <!--id="tarkkaKiintio"-->
-                           <!--ng-model="model.hakijaryhma.tarkkaKiintio"-->
-                           <!--popover-popup-delay="500"-->
-                           <!--popover-placement="right"-->
-                           <!--popover-trigger="mouseenter"-->
-                           <!--popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä"-->
-                            <!--/>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+            <div class="col-md-2 ">
+                <div class="checkbox">
+                    <input type="checkbox"
+                           id="tarkkaKiintio"
+                           ng-model="model.hakijaryhma.tarkkaKiintio"
+                           popover-popup-delay="500"
+                           popover-placement="right"
+                           popover-trigger="mouseenter"
+                           popover="Hakijaryhmästä hyväksytään tarkalleen kiintiön mukainen määrä"
+                            />
+                </div>
+            </div>
+        </div>
 
-        <!--<div class="form-group">-->
-            <!--<label class="col-md-2 control-label"-->
-                   <!--for="kaytaKaikki"-->
-                   <!--popover-popup-delay="500"-->
-                   <!--popover-placement="right"-->
-                   <!--popover-trigger="mouseenter"-->
-                   <!--popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt">Käytä kaikki hyväksytyt</label>-->
+        <div class="form-group">
+            <label class="col-md-2 control-label"
+                   for="kaytaKaikki"
+                   popover-popup-delay="500"
+                   popover-placement="right"
+                   popover-trigger="mouseenter"
+                   popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt">Käytä kaikki hyväksytyt</label>
 
-            <!--<div class="col-md-2 ">-->
-                <!--<div class="checkbox" >-->
-                    <!--<input type="checkbox"-->
-                           <!--ng-model="model.hakijaryhma.kaytaKaikki"-->
-                           <!--id="kaytaKaikki"-->
-                           <!--popover-popup-delay="500"-->
-                           <!--popover-placement="right"-->
-                           <!--popover-trigger="mouseenter"-->
-                           <!--popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt"-->
-                            <!--/>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+            <div class="col-md-2 ">
+                <div class="checkbox" >
+                    <input type="checkbox"
+                           ng-model="model.hakijaryhma.kaytaKaikki"
+                           id="kaytaKaikki"
+                           popover-popup-delay="500"
+                           popover-placement="right"
+                           popover-trigger="mouseenter"
+                           popover="Otetaanko tästä hakijaryhmästä kaikki hyväksytyt"
+                            />
+                </div>
+            </div>
+        </div>
 
 
         <div class="form-group">
