Testit ajetaan myös valintaperusteet-ui:n buildissa

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../common/jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../common/jslib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular.min.js"></script>
-    <script type="text/javascript" src="../common/jslib/lodash.underscore.min.js"></script>
+    <script type="text/javascript" src="../common/jslib/lodash.underscore.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-resource.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-route.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-animate.min.js"></script>
