VT-874 Lokalisointipalvelun käyttöönotto valinnoissa

--- a/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
+++ b/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
@@ -1,9 +1,9 @@
 <h1>{{ t('yhteisvalinnanhallinta.header') || 'Yhteisvalinnan hallinta' }}</h1>
 
 <div class="tabs">
-    <a href="#/etusivu" class="tab"><span>{{ t('yhteisvalinnanhallinta.etusivu') || 'Valintaryhmät ja hakukohteet' }}</span></a>
-    <a href="#/laskentakaava" class="tab"><span>{{ t('yhteisvalinnanhallinta.laskentakaava') || 'Laskentakaavat' }}</span></a>
-    <a auth="crudOph" href="#/import" class="tab float-right current"><span>{{ t('yhteisvalinnanhallinta.import') || 'Yhteisvalinnan hallinta' }}</span></a>
+    <a href="#/etusivu" class="tab"><span>{{ t('common.etusivu') || 'Valintaryhmät ja hakukohteet' }}</span></a>
+    <a href="#/laskentakaava" class="tab"><span>{{ t('common.laskentakaava') || 'Laskentakaavat' }}</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right current"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
 </div>
 <div class="tabsheets">
 
